fix(client): add flex-wrap for mobile

--- a/packages/client/assets/style/customize.css
+++ b/packages/client/assets/style/customize.css
@@ -24,6 +24,7 @@
   text-align: var(--base-align);
   background: var(--color-background);
   position: relative;
+  flex-wrap: wrap;
 }
 
 .slide-internal-box {
